RESOLVED FIXED103870
Fix compilation for Qt5.0.0 stable branch.
https://bugs.webkit.org/show_bug.cgi?id=103870
Summary Fix compilation for Qt5.0.0 stable branch.
Michael Brüning
Reported 2012-12-03 02:33:20 PST
QWindow::pos() and QQuickItem::pos() have been renamed to position().
Attachments
Patch (2.45 KB, patch)
2012-12-03 02:52 PST, Michael Brüning
no flags
Patch (6.67 KB, patch)
2012-12-04 13:02 PST, Andras Becsi
no flags
Michael Brüning
Comment 1 2012-12-03 02:42:08 PST
Patch has been made in QtWebKit module in Qt 5 by Lars Knoll and I am moving it to trunk as building against the stable branch of Qt 5 is not possible at the moment and it will be necessary once the RC is released. If this patch goes in, the bots will need to be updated to a recent stable Qt5 version (e.g. f67e9c6bf28a2ced359d20bbd78478b15d6146d2 or later). (Apologies for the incomplete description, accidentally hit return prematurely when adding CCs.)
Michael Brüning
Comment 2 2012-12-03 02:52:47 PST
Early Warning System Bot
Comment 3 2012-12-03 02:58:59 PST
Csaba Osztrogonác
Comment 4 2012-12-03 03:03:04 PST
Simon, should we update the bots to stable/f67e9c6bf28a2ced359d20bbd78478b15d6146d2 ?
Simon Hausmann
Comment 5 2012-12-03 07:29:59 PST
No objections at all from my side :)
Andras Becsi
Comment 6 2012-12-04 13:02:15 PST
Andras Becsi
Comment 7 2012-12-04 13:05:59 PST
(In reply to comment #6) > Created an attachment (id=177531) [details] > Patch For the sake of convenience I squashed all the patches neede from the stable branch. As soon as the bots have been updated to the latest stable these fixes are needed.
Early Warning System Bot
Comment 8 2012-12-04 13:06:32 PST
Early Warning System Bot
Comment 9 2012-12-04 13:08:35 PST
Csaba Osztrogonác
Comment 10 2012-12-05 09:49:12 PST
Comment on attachment 177531 [details] Patch Clearing flags on attachment: 177531 Committed r136707: <http://trac.webkit.org/changeset/136707>
Csaba Osztrogonác
Comment 11 2012-12-05 09:49:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.