Fix compilation for Qt5.0.0 stable branch. https://bugs.webkit.org/show_bug.cgi?id=103870

Source/WebCore:

Patch by Andras Becsi <andras.becsi@digia.com> on 2012-12-05
Reviewed by Simon Hausmann.

This is a squashed patch consisting of patches by multiple authors.

Fixed use of to-be-removed compatibility functions in QWindow
Patch by Samuel Rødal <samuel.rodal@digia.com>

Build fix. No new tests needed.

* platform/graphics/gstreamer/PlatformVideoWindowQt.cpp:
(FullScreenVideoWindow::FullScreenVideoWindow):
(PlatformVideoWindow::PlatformVideoWindow):

Source/WebKit2:

Patch by Michael Brüning <michael.bruning@digia.com> on 2012-12-05
Reviewed by Simon Hausmann.

QWindow::pos() and QQuickItem::pos() have been renamed to position().
Patch by Lars Knoll <lars.knoll@digia.com>

* UIProcess/qt/PageViewportControllerClientQt.cpp:
(WebKit::PageViewportControllerClientQt::setContentRectVisiblePositionAtScale):
(WebKit::PageViewportControllerClientQt::setViewportPosition):

Tools:

Patch by Andras Becsi <andras.becsi@digia.com> on 2012-12-05
Reviewed by Simon Hausmann.

Fix the use of renamed QWindow functions.
Patch by Andras Becsi <andras.becsi@digia.com>

* MiniBrowser/qt/BrowserWindow.cpp:
(BrowserWindow::BrowserWindow):
(BrowserWindow::onTitleChanged):
* MiniBrowser/qt/raw/View.cpp:
(View::View):

Canonical link: https://commits.webkit.org/122289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136707 268f45cc-cd09-0410-ab3c-d52691b4dbfc