Source/WebCore/platform/graphics/gstreamer/PlatformVideoWindowQt.cpp
@@ -38,7 +38,7 @@ static const int gHideMouseCursorDelay = 3000;
 FullScreenVideoWindow::FullScreenVideoWindow()
     : m_mediaElement(0)
 {
-    setWindowModality(Qt::ApplicationModal);
+    setModality(Qt::ApplicationModal);
 
 #ifndef QT_NO_CURSOR
     m_cursorTimer.setSingleShot(true);
@@ -115,7 +115,7 @@ PlatformVideoWindow::PlatformVideoWindow()
 {
     QWindow* win = new FullScreenVideoWindow();
     m_window = win;
-    win->setWindowFlags(win->windowFlags() | Qt::FramelessWindowHint);
+    win->setFlags(win->flags() | Qt::FramelessWindowHint);
     // FIXME: Port to Qt 5.
     win->showFullScreen();
     m_videoWindowId = win->winId();
